<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity" >

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >
        
         <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- Login form -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            style="@style/LoginFormContainer"
                    android:background="@drawable/mainpic1"
            android:orientation="vertical"
           >

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" 
                android:layout_marginTop="15dp"
                android:background="@drawable/rect_text_edit"
                />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/rect_text_edit" />

            <Button
                android:id="@+id/plan_travel_button"
                android:layout_width="120dp"
                android:layout_height="45dp"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:background="@drawable/btnstyle"
                android:text="@string/action_sign_in_short" />

            <TextView
                android:id="@+id/link_to_forgotpwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dip"
                android:layout_marginTop="40dip"
                android:gravity="center"
                android:text="@string/forgotpwd_link"
                android:textColor="#0b84aa"
                android:textSize="20sp" />
            <!-- Link to Registration Screen -->

            <TextView
                android:id="@+id/link_to_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dip"
                android:layout_marginTop="15dip"
                android:gravity="center"
                android:text="@string/signup_link"
                android:textColor="#0b84aa"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
  
    

</merge>