<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TravelPlannerActivity" >

    <!-- travel plan  progress -->

    <LinearLayout
        android:id="@+id/travel_plan_status"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/mainpic1"
        >

        

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
    <!-- Travel Plan Form -->

    <ScrollView
        android:id="@+id/travel_plan_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/LinearLayoutDash"
            style="@style/LoginFormContainer"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtViewSource" />

            <Spinner
                android:id="@+id/sourceSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtViewDstn" />

            <Spinner
                android:id="@+id/dstnSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />

            <EditText
                android:id="@+id/etJourneyDate"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:ems="10"
                android:hint="@string/hintJourneyDate"
                android:inputType="date"
                android:layout_marginTop="15dp"
                 android:background="@drawable/rect_text_edit" />

            <Button
                android:id="@+id/plan_travel_button"
                android:layout_width="190dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:onClick="onBuyPressed"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:background="@drawable/btnstyle"
                android:text="@string/action_travel_plan" />
        </LinearLayout>
    </ScrollView>

</merge>